[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "djust"
version = "1.0.8"
description = "Phoenix LiveView-style reactive components for Django with Rust-powered performance. Real-time UI updates over WebSocket, no JavaScript build step required."
authors = [{name = "djust contributors"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["django", "rust", "reactive", "server-side-rendering", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Dependency ceiling policy (#910):
# Every runtime/dev dependency pins an upper bound at the next major version
# to prevent uncontrolled major bumps during lockfile refreshes. This was
# introduced after PR #909, where a `Django>=4.2` constraint allowed `uv lock`
# to resolve to Django 6.x and break 4.2-compatible code paths. The ceiling
# is the next major that has not yet been validated against djust's test
# matrix (see `classifiers` above). Bumping a ceiling is a deliberate,
# reviewed change — not something lockfile refresh should do silently.
dependencies = [
    "Django>=4.2.29,<6",
    "channels[daphne]>=4.0.0,<5",
    "msgpack>=1.0.0,<2",
    "markdown>=3.0,<4",
    "nh3>=0.2,<1",
    # `djust deploy` is a first-class CLI command, so click + requests are
    # base deps rather than gated behind a `[deploy]` extra. Both are tiny
    # and ubiquitous; the `deploy` extra below is kept as a no-op alias for
    # back-compat with installers that already pin `djust[deploy]`.
    "click>=8.0,<9",
    "requests>=2.28,<3",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0,<9",
]
compression = [
    "zstandard>=0.22.0,<1",  # zstd compression for state backend
]
performance = [
    "orjson>=3.11.6,<4",
    "zstandard>=0.22.0,<1",
]
# ADR-007 Phase 4 — consolidated packages. Each extra is `pip install
# djust[<name>]`; the standalone `djust-<name>` PyPI packages are sunset
# (final v99.0.0 tag, DeprecationWarning on import, re-exports from
# djust.<name>). Migration guide: docs/website/guides/migration-from-standalone-packages.md
auth = []  # No extra deps beyond djust core
tenants = []  # No extra deps beyond djust core; use [tenants-redis] / [tenants-postgres] for backend-specific
tenants-redis = [
    "redis>=5.0.0,<9",
]
tenants-postgres = [
    "psycopg[binary]>=3.1,<4",
]
theming = []  # No extra deps beyond djust core
admin = []  # No extra deps beyond djust core
deploy = []  # Back-compat alias; click + requests now ship as base deps for `djust deploy`
components = [
    "markdown>=3.0,<4",
    "nh3>=0.2,<1",
]
# v0.5.7 (#820, #822) — object-storage upload backends. Optional; the
# contrib modules import cleanly without the SDK but raise ImportError
# with a clear hint when a signing/upload call is actually made.
s3 = [
    "boto3>=1.30,<2",
]
gcs = [
    "google-cloud-storage>=2.10,<4",
    "requests>=2.28,<3",
]
azure = [
    "azure-storage-blob>=12.19,<13",
]
all = [
    "djust[redis,compression,performance,admin,deploy,theming,components,s3,gcs,azure]",
]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=7.0,<10",
    "pytest-django>=4.5,<6",
    "pytest-asyncio>=0.21,<2",
    "pytest-xdist>=3.0,<4",  # Parallel test execution
    "pytest-benchmark>=4.0.0,<6",  # Performance benchmarking
    "ruff>=0.1,<1",
    "mypy>=1.0,<3",
    "uvicorn[standard]>=0.30.0,<1",
    "redis>=5.0.0,<9",
    "watchdog>=3.0.0,<7",  # File system monitoring for hot reload
    "zstandard>=0.22.0,<1",  # Compression support
    "orjson>=3.11.6,<4",
    "click>=8.0,<9",  # Deploy CLI
    "requests>=2.28,<3",  # Deploy CLI
    "requests-mock>=1.11,<2",  # HTTP mocking for deploy CLI tests
    "mcp[cli]>=1.2.0,<2",  # djust.mcp server tests (test_mcp.py)
    "fakeredis>=2.20,<3",  # In-memory Redis for test_security_upload_resumable.py (closes #961)
]

[project.scripts]
djust = "djust.cli:main"
djust-deploy = "djust.deploy_cli:cli"

[project.urls]
Homepage = "https://djust.org"
Documentation = "https://djust.org/quickstart/"
Repository = "https://github.com/djust-org/djust"
Issues = "https://github.com/djust-org/djust/issues"
Changelog = "https://github.com/djust-org/djust/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "djust._rust"
python-source = "python"
bindings = "pyo3"
manifest-path = "crates/djust_live/Cargo.toml"
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["python/tests", "python/djust/tests", "tests/unit", "tests/e2e", "tests/integration"]
pythonpath = [".", "examples/demo_project"]
DJANGO_SETTINGS_MODULE = "demo_project.settings"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--ignore=tests/playwright",  # Manual tests, not for CI
    "--ignore=tests/js",  # JavaScript tests run with npm test
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "asyncio: marks tests as async tests",
    "benchmark: marks tests as benchmarks (run with pytest-benchmark)",
    "auth: marks tests for djust.auth module",
    "tenants: marks tests for djust.tenants module",
    "admin: marks tests for djust.admin_ext module",
    "theming: marks tests for djust.theming module",
    "components: marks tests for djust.components module",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
# --------------------------------------------------------------------------- #
# Incremental type enforcement — see docs/adr/023-incremental-type-enforcement.md
#
# The global default is intentionally LENIENT so the gate is GREEN today
# (`mypy python/djust` exits 0) against the ~8.4k-error legacy baseline. Strict
# enforcement is applied per-module via the `[[tool.mypy.overrides]]` "strict
# islands" below — a small set of modules that pass clean under strict rules.
# The ratchet: flip one module at a time from lenient to a strict island, fixing
# its annotations/real errors in that PR. Prioritise the developer-facing public
# API (live_view / component / decorators / forms) since py.typed exposes our
# types to consumers, with `_rust.pyi` typing the PyO3 boundary.
# --------------------------------------------------------------------------- #
python_version = "3.10"
warn_unused_configs = true

# Kill third-party + Django + PyYAML "missing library stubs" noise (and any
# stale _rust import noise). The `_rust.pyi` stub still types the PyO3 surface
# for the strict islands below.
ignore_missing_imports = true

# Lenient global default (legacy modules not yet on a strict island). The legacy
# baseline carries ~8.4k errors (≈6.8k missing annotations + ~700 real type
# errors); enforcing strict globally would make the gate permanently red, so the
# global default parks legacy errors via `ignore_errors`. This is the canonical
# mypy incremental-adoption pattern (NOT a blanket free pass — the strict islands
# below flip `ignore_errors` back OFF and genuinely enforce every error class).
# The ratchet flips one module at a time out of this lenient default into a
# strict island, triaging its real errors in that PR.
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
ignore_errors = true

# Third-party libraries consumed BY a strict island but lacking type stubs.
# `ignore_missing_imports` in the global section is honored by lenient modules,
# but a strict island (ignore_errors=false) still surfaces `import-untyped` for
# an installed-but-unstubbed dependency (e.g. PyYAML, consumed by
# djust.permissions). Mark those libraries untyped explicitly so the strict
# islands stay green without weakening the island's own def/return strictness.
[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# STRICT ISLANDS — modules enforced under full strict rules. Each is verified to
# pass clean (0 errors) under disallow_untyped_defs + disallow_incomplete_defs +
# warn_return_any. Adding a module here is the "ratchet" — do it one module per
# PR. Do NOT add a module that doesn't pass clean; fix its annotations first.
# --------------------------------------------------------------------------- #

# Security boundary (highest-value island: the trust surface).
[[tool.mypy.overrides]]
module = [
    "djust.security.*",
    "djust._rust",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# Rate limiting + connection guard (DoS surface).
[[tool.mypy.overrides]]
module = ["djust.rate_limit"]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# Input validation + permissions audit (security-adjacent).
[[tool.mypy.overrides]]
module = [
    "djust.validation",
    "djust.permissions",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# Well-annotated utility / leaf modules (low-churn, easy to keep green).
[[tool.mypy.overrides]]
module = [
    "djust.markdown",
    "djust.schema",
    "djust.signals",
    "djust.async_result",
    "djust.test_isolation",
    "djust._client_ip",
    "djust._log_utils",
    "djust._html",
    "djust._view_resolution",
    "djust._deprecation",
    "djust._context_provider",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# Public-API quartet (ADR-023 M2) — the developer-facing surface that py.typed
# exposes to downstream consumers. Strict-typing these protects every consumer's
# type-check against signature drift in our public API.
[[tool.mypy.overrides]]
module = [
    "djust.live_view",
    "djust.components.base",
    "djust.decorators",
    "djust.forms",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# Dispatch/runtime core (ADR-023 M3) — the WebSocket/SSE/runtime spine that
# every event + mount flows through. Strict-typing these protects the transport
# dispatch contract (ViewRuntime convergence, ADR-022) against signature drift.
[[tool.mypy.overrides]]
module = [
    "djust.runtime",
    "djust.websocket",
    "djust.websocket_utils",
    "djust.sse",
    "djust.streaming",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# Loose top-level modules (ADR-023 M4a) — independent, low-cross-risk modules
# flipped from the lenient default to strict islands. Spans the wire-boundary
# serializer, config/routing/formsets/init plumbing, the public test client,
# the JS-command builder, the simple/react/rust component shims, the CSS
# framework adapters, the wizard/presence mixins, and the perf/profiler tooling.
[[tool.mypy.overrides]]
module = [
    "djust.serialization",
    "djust.config",
    "djust.__init__",
    "djust.routing",
    "djust.formsets",
    "djust.simple_live_view",
    "djust.testing",
    "djust.react",
    "djust.rust_components",
    "djust.frameworks",
    "djust.js",
    "djust.wizard",
    "djust.performance",
    "djust.profiler",
    "djust.presence",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# components/ machinery (ADR-023 M4b, part 1) — the core component-system
# plumbing (NOT the UI catalog, which is a later batch). Spans the registry,
# assigns/dependencies/preset/icon registries, the @component function-component
# decorator + {% call %} dispatch, the suspense + server-event-toast mixins, the
# shared cell/color formatting utils, the AppConfig, the package __init__, the
# per-component interactive mixin base (TypedState), and the dev-tools template
# tags + their shared registry/safe-URL helper. The large Rust-bridge handler
# registry (rust_handlers), the per-widget data_table mixin, and the big
# templatetag modules (djust_components/_advanced/_forms/_charts) remain lenient
# for a continuation batch.
[[tool.mypy.overrides]]
module = [
    "djust.components.__init__",
    "djust.components.apps",
    "djust.components.registry",
    "djust.components.assigns",
    "djust.components.dependencies",
    "djust.components.function_component",
    "djust.components.helpers",
    "djust.components.presets",
    "djust.components.icons",
    "djust.components.suspense",
    "djust.components.server_event_toast",
    "djust.components.utils",
    "djust.components.mixins.base",
    "djust.components.templatetags._registry",
    "djust.components.templatetags._dev_tools",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# components/ UI catalog + templatetag helpers (ADR-023 M4b, part 2) — the
# component UI catalog and small templatetag helper modules. Spans the full
# components/components/ widget catalog, the ui/ stateless widgets, the data/
# forms/ layout/ gallery/ management/ ttyd/ leaf modules, the descriptor-based
# components (descriptors/*), and the deprecated state mixins (mixins/tooltip,
# tabs, sheet, modal, dropdown, collapsible, carousel, accordion). The large
# Rust-bridge handler registry (rust_handlers), the per-widget data_table mixin,
# the big templatetag modules (djust_components/_advanced/_forms/_charts), the
# gallery LiveViews, and the union-typed `*_simple` UI widgets remain lenient
# for a continuation batch.
[[tool.mypy.overrides]]
module = [
    "djust.components.components.__init__",
    "djust.components.components.accordion",
    "djust.components.components.activity_feed",
    "djust.components.components.agent_step",
    "djust.components.components.alert",
    "djust.components.components.announcement_bar",
    "djust.components.components.app_shell",
    "djust.components.components.approval_gate",
    "djust.components.components.aspect_ratio",
    "djust.components.components.audit_log",
    "djust.components.components.avatar",
    "djust.components.components.avatar_group",
    "djust.components.components.badge",
    "djust.components.components.bar_chart",
    "djust.components.components.bottom_sheet",
    "djust.components.components.breadcrumb",
    "djust.components.components.calendar_heatmap",
    "djust.components.components.callout",
    "djust.components.components.card",
    "djust.components.components.carousel",
    "djust.components.components.chat_bubble",
    "djust.components.components.code_block",
    "djust.components.components.code_snippet",
    "djust.components.components.collab_selection",
    "djust.components.components.collapsible",
    "djust.components.components.color_picker",
    "djust.components.components.combobox",
    "djust.components.components.command_palette",
    "djust.components.components.connection_status",
    "djust.components.components.content_loader",
    "djust.components.components.context_menu",
    "djust.components.components.conversation_thread",
    "djust.components.components.cookie_consent",
    "djust.components.components.copy_button",
    "djust.components.components.copyable_text",
    "djust.components.components.countdown",
    "djust.components.components.cron_input",
    "djust.components.components.cursors_overlay",
    "djust.components.components.dashboard_grid",
    "djust.components.components.data_card_grid",
    "djust.components.components.data_grid",
    "djust.components.components.data_table",
    "djust.components.components.date_picker",
    "djust.components.components.description_list",
    "djust.components.components.dropdown",
    "djust.components.components.dropdown_menu",
    "djust.components.components.empty_state",
    "djust.components.components.error_boundary",
    "djust.components.components.error_page",
    "djust.components.components.expandable_text",
    "djust.components.components.export_dialog",
    "djust.components.components.fab",
    "djust.components.components.feedback_widget",
    "djust.components.components.fieldset",
    "djust.components.components.file_dropzone",
    "djust.components.components.file_tree",
    "djust.components.components.filter_bar",
    "djust.components.components.form_array",
    "djust.components.components.form_group",
    "djust.components.components.gantt_chart",
    "djust.components.components.gauge",
    "djust.components.components.hover_card",
    "djust.components.components.icon",
    "djust.components.components.image_cropper",
    "djust.components.components.image_lightbox",
    "djust.components.components.image_upload_preview",
    "djust.components.components.import_wizard",
    "djust.components.components.infinite_scroll",
    "djust.components.components.inline_edit",
    "djust.components.components.input_group",
    "djust.components.components.kanban_board",
    "djust.components.components.kbd",
    "djust.components.components.line_chart",
    "djust.components.components.live_counter",
    "djust.components.components.live_indicator",
    "djust.components.components.loading_overlay",
    "djust.components.components.log_viewer",
    "djust.components.components.map_picker",
    "djust.components.components.markdown_editor",
    "djust.components.components.markdown_textarea",
    "djust.components.components.mentions_input",
    "djust.components.components.meter",
    "djust.components.components.modal",
    "djust.components.components.multi_select",
    "djust.components.components.multimodal_input",
    "djust.components.components.nav_menu",
    "djust.components.components.notification_badge",
    "djust.components.components.notification_center",
    "djust.components.components.notification_popover",
    "djust.components.components.number_stepper",
    "djust.components.components.otp_input",
    "djust.components.components.page_alert",
    "djust.components.components.page_header",
    "djust.components.components.pagination",
    "djust.components.components.pie_chart",
    "djust.components.components.popover",
    "djust.components.components.presence_avatars",
    "djust.components.components.progress",
    "djust.components.components.progress_circle",
    "djust.components.components.rating",
    "djust.components.components.reactions",
    "djust.components.components.relative_time",
    "djust.components.components.resizable_panel",
    "djust.components.components.responsive_image",
    "djust.components.components.ribbon",
    "djust.components.components.rich_text_editor",
    "djust.components.components.scroll_area",
    "djust.components.components.scroll_spy",
    "djust.components.components.scroll_to_top",
    "djust.components.components.segmented_progress",
    "djust.components.components.sheet",
    "djust.components.components.sidebar",
    "djust.components.components.signature_pad",
    "djust.components.components.skeleton",
    "djust.components.components.skeleton_factory",
    "djust.components.components.sortable_grid",
    "djust.components.components.sortable_list",
    "djust.components.components.source_citation",
    "djust.components.components.sparkline",
    "djust.components.components.spinner",
    "djust.components.components.split_button",
    "djust.components.components.split_pane",
    "djust.components.components.stat_card",
    "djust.components.components.status_indicator",
    "djust.components.components.stepper",
    "djust.components.components.sticky_header",
    "djust.components.components.streaming_text",
    "djust.components.components.switch",
    "djust.components.components.table_of_contents",
    "djust.components.components.tabs",
    "djust.components.components.tag",
    "djust.components.components.tag_input",
    "djust.components.components.terminal",
    "djust.components.components.theme_toggle",
    "djust.components.components.thinking_indicator",
    "djust.components.components.timeline",
    "djust.components.components.toast",
    "djust.components.components.toggle_group",
    "djust.components.components.token_counter",
    "djust.components.components.toolbar",
    "djust.components.components.tooltip",
    "djust.components.components.tour",
    "djust.components.components.truncated_list",
    "djust.components.components.virtual_list",
    "djust.components.components.voice_input",
    "djust.components.components.wizard",
    "djust.components.data.__init__",
    "djust.components.data.table",
    "djust.components.descriptors.__init__",
    "djust.components.descriptors.accordion",
    "djust.components.descriptors.base",
    "djust.components.descriptors.carousel",
    "djust.components.descriptors.collapsible",
    "djust.components.descriptors.dropdown",
    "djust.components.descriptors.modal",
    "djust.components.descriptors.sheet",
    "djust.components.descriptors.tabs",
    "djust.components.descriptors.tooltip",
    "djust.components.forms.__init__",
    "djust.components.forms.foreign_key",
    "djust.components.gallery.__init__",
    "djust.components.gallery.urls",
    "djust.components.layout.__init__",
    "djust.components.layout.navbar",
    "djust.components.management.__init__",
    "djust.components.management.commands.__init__",
    "djust.components.mixins.__init__",
    "djust.components.mixins.accordion",
    "djust.components.mixins.carousel",
    "djust.components.mixins.collapsible",
    "djust.components.mixins.dropdown",
    "djust.components.mixins.modal",
    "djust.components.mixins.sheet",
    "djust.components.mixins.tabs",
    "djust.components.mixins.tooltip",
    "djust.components.templatetags.__init__",
    "djust.components.ttyd.__init__",
    "djust.components.ui.__init__",
    "djust.components.ui.alert",
    "djust.components.ui.badge",
    "djust.components.ui.button",
    "djust.components.ui.card",
    "djust.components.ui.modal",
    "djust.components.ui.progress",
    "djust.components.ui.spinner",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# components/ FINAL batch (ADR-023 M4b, part 3) — the LAST remaining
# components/ modules: the component template-tag layer
# (djust_components/_advanced/_forms/_charts), the per-widget data_table mixin,
# the gallery LiveView/view/registry/examples surface + its management command,
# the ~24 remaining components/components/ widgets, the layout/data/ttyd leaves,
# and the union-typed `ui/*_simple` + ui/dropdown stateless widgets. The large
# Rust-bridge handler registry (rust_handlers) is intentionally left LENIENT — it
# is a genuinely-dynamic registry whose handlers parse untyped Rust-engine arg
# lists into object-valued dicts (kw.get()->object cascades), so strict typing
# would require >200 narrowing changes / type: ignores with real rendering-behavior
# risk; the global lenient default is the correct home for it (documented exception).
[[tool.mypy.overrides]]
module = [
    "djust.components.components.animated_number",
    "djust.components.components.breadcrumb_dropdown",
    "djust.components.components.button",
    "djust.components.components.calendar_view",
    "djust.components.components.comparison_table",
    "djust.components.components.currency_input",
    "djust.components.components.dependent_select",
    "djust.components.components.diff_viewer",
    "djust.components.components.form_validation",
    "djust.components.components.heatmap",
    "djust.components.components.json_viewer",
    "djust.components.components.markdown",
    "djust.components.components.masonry_grid",
    "djust.components.components.model_selector",
    "djust.components.components.org_chart",
    "djust.components.components.pivot_table",
    "djust.components.components.prompt_editor",
    "djust.components.components.qr_code",
    "djust.components.components.rich_select",
    "djust.components.components.server_event_toast",
    "djust.components.components.status_dot",
    "djust.components.components.time_picker",
    "djust.components.components.tree_view",
    "djust.components.components.treemap",
    "djust.components.data.pagination",
    "djust.components.gallery.context_processors",
    "djust.components.gallery.examples",
    "djust.components.gallery.live_views",
    "djust.components.gallery.registry",
    "djust.components.gallery.views",
    "djust.components.layout.tabs",
    "djust.components.management.commands.component_gallery",
    "djust.components.mixins.data_table",
    "djust.components.templatetags._advanced",
    "djust.components.templatetags._charts",
    "djust.components.templatetags._forms",
    "djust.components.templatetags.djust_components",
    "djust.components.ttyd.terminal",
    "djust.components.ui.accordion_simple",
    "djust.components.ui.alert_simple",
    "djust.components.ui.avatar_simple",
    "djust.components.ui.badge_simple",
    "djust.components.ui.breadcrumb_simple",
    "djust.components.ui.button_group_simple",
    "djust.components.ui.button_simple",
    "djust.components.ui.card_simple",
    "djust.components.ui.checkbox_simple",
    "djust.components.ui.divider_simple",
    "djust.components.ui.dropdown",
    "djust.components.ui.dropdown_simple",
    "djust.components.ui.icon_simple",
    "djust.components.ui.input_simple",
    "djust.components.ui.list_group_simple",
    "djust.components.ui.modal_simple",
    "djust.components.ui.navbar_simple",
    "djust.components.ui.offcanvas_simple",
    "djust.components.ui.pagination_simple",
    "djust.components.ui.progress_simple",
    "djust.components.ui.radio_simple",
    "djust.components.ui.range_simple",
    "djust.components.ui.select_simple",
    "djust.components.ui.spinner_simple",
    "djust.components.ui.switch_simple",
    "djust.components.ui.table_simple",
    "djust.components.ui.tabs_simple",
    "djust.components.ui.textarea_simple",
    "djust.components.ui.toast_simple",
    "djust.components.ui.tooltip_simple",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# admin_ext/ subpackage (ADR-023 M4c, part 2) — the Django-admin integration:
# the DjustAdminSite + DjustModelAdmin config, the plugin system (AdminPlugin /
# AdminPage / AdminWidget / NavItem), the LiveView-based admin views (list /
# detail / create / delete / login / logout), the AdminFormMixin (FK/M2M/date
# field handling), the bulk-action progress widget + decorator, the admin
# CSS-framework adapter, the register/action/display decorators, the AppConfig,
# the autodiscover __init__, and the admin template-tag helpers. Excludes
# admin_ext/tests/, which stays on the lenient global default. Real type bugs
# fixed to clean this island: implicit-Optional defaults in LoginView field
# handlers, an LSP-incompatible ModelCreateView.mount override, and several
# Any-leak returns narrowed at the Django-untyped boundary (str()/bool()).
[[tool.mypy.overrides]]
module = [
    "djust.admin_ext.__init__",
    "djust.admin_ext.adapters",
    "djust.admin_ext.apps",
    "djust.admin_ext.components.__init__",
    "djust.admin_ext.decorators",
    "djust.admin_ext.forms",
    "djust.admin_ext.options",
    "djust.admin_ext.plugins",
    "djust.admin_ext.progress",
    "djust.admin_ext.sites",
    "djust.admin_ext.templatetags.__init__",
    "djust.admin_ext.templatetags.djust_admin_tags",
    "djust.admin_ext.views",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# mixins/ subpackage (ADR-023 M4c, part 1) — the LiveView mixin layer that
# composes the public LiveView class. Spans the small leaf mixins (flash,
# layout, page_metadata, post_processing, async_work, waiters, model_binding,
# components), the context/JIT serialization mixins (context, jit), the HTTP
# request handling mixin (request), the Rust-bridge / change-detection mixin
# (rust_bridge — annotations only; the _sync_state_to_rust change-detection +
# _framework_attrs filter logic is byte-identical, no comparison/filter change),
# and the large template-rendering mixin (template). The mixins/ tests directory
# does not exist; there is no test sub-package to exclude.
[[tool.mypy.overrides]]
module = [
    "djust.mixins.__init__",
    "djust.mixins.activity",
    "djust.mixins.async_work",
    "djust.mixins.components",
    "djust.mixins.context",
    "djust.mixins.flash",
    "djust.mixins.handlers",
    "djust.mixins.jit",
    "djust.mixins.layout",
    "djust.mixins.model_binding",
    "djust.mixins.navigation",
    "djust.mixins.notifications",
    "djust.mixins.page_metadata",
    "djust.mixins.post_processing",
    "djust.mixins.push_events",
    "djust.mixins.request",
    "djust.mixins.rust_bridge",
    "djust.mixins.sticky",
    "djust.mixins.streams",
    "djust.mixins.template",
    "djust.mixins.waiters",
]
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true


[tool.bandit]
# Skip mark_safe warnings in components - this is a templating framework
# where mark_safe is expected and safe (content comes from trusted templates)
exclude_dirs = ["tests", "python/tests", "python/djust/tests"]
skips = ["B703", "B308"]  # mark_safe is expected in templates

[tool.uv]
constraint-dependencies = [
    "urllib3>=2.6.3",
    "setuptools>=78.1.1",
    "ujson>=5.12.0",
    "pyopenssl>=26.0.0",
    "pyasn1>=0.6.3",
]

[tool.bandit.per_file_ignores]
# In components, mark_safe is used for trusted template output
"python/djust/components/*" = ["B703", "B308"]
"python/djust/live_view.py" = ["B703", "B308"]

[tool.ruff.lint.per-file-ignores]
"python/djust/components/**" = ["E402", "E741", "F841"]  # Pre-existing upstream lint
"python/djust/theming/**" = ["E741"]  # 'l' is idiomatic in HSL color code
"python/djust/theming/accessibility.py" = ["F524"]  # CSS in format strings
"python/djust/theming/build_themes.py" = ["E402"]  # Conditional imports after settings
"python/djust/tests/test_theming_*.py" = ["E741", "E402"]  # Upstream test conventions
