[package]
name = "djust_live"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# Library name for Rust imports
name = "djust_live"
# Both cdylib (for Python module _rust) and rlib (for other Rust crates)
crate-type = ["cdylib", "rlib"]

[features]
# `extension-module` tells PyO3 not to link libpython — symbols come from the
# host interpreter at load time. This is correct for the maturin / runtime
# build path, but breaks `cargo test -p djust_live` because there is no host
# interpreter at link time (`ld: symbol(s) not found ... Py_True`).
#
# Gating `extension-module` behind a default-on feature (#1543) keeps the
# maturin build path unchanged (default = ["extension-module"] reproduces
# the prior behavior for `make build` / `cargo build`) while letting tests
# opt out with `cargo test -p djust_live --no-default-features`. The
# top-level `[tool.maturin]` block in `pyproject.toml` continues to pass
# `pyo3/extension-module` explicitly, so maturin remains independent of
# our feature default.
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true }
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
dashmap.workspace = true
once_cell.workspace = true

# Local dependencies
djust_core = { path = "../djust_core" }
djust_templates = { path = "../djust_templates" }
djust_vdom = { path = "../djust_vdom" }
djust_components = { path = "../djust_components" }

# Additional dependencies for actor system
tokio = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
pyo3-async-runtimes = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
